# v3d

./: .clang-format  CMakeLists.txt
cmake/: Cache.cmake  CompilerWarnings.cmake  Hardening.cmake  InterproceduralOptimization.cmake  Linker.cmake  PreventInSourceBuild.cmake  ProjectOptions.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake
include/v3d/core/: Event.h  EventType.h  Logger.h  Window.h
include/v3d/platform/glfw/: GLFWwindow.h
src/: CMakeLists.txt
src/v3d/: CMakeLists.txt  main.cpp
src/v3dlib/: CMakeLists.txt
src/v3dlib/src/: Event.cpp  GLFWwindow.cpp  Logger.cpp  v3dlib.cpp
